new gitignore again

--- a/.gitignore
+++ b/.gitignore
@@ -482,3 +482,7 @@ $RECYCLE.BIN/
 
 # Vim temporary swap files
 *.swp
+
+
+MainProject\MainProject\obj\Debug\net8.0\MainProject.AssemblyInfo.cs
+MainProject\MainProject\obj\Debug\net8.0\MainProject.AssemblyInfoInputs.cache
