Added database connection

--- a/MainProject/MainProject/appsettings.json
+++ b/MainProject/MainProject/appsettings.json
@@ -5,5 +5,8 @@
             "System": "Information",
             "Microsoft": "Information"
         }
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=LAPTOP-ILUK0PDF;Database='Driving Booking Lesson System';Trusted_Connection=True;TrustServerCertificate=True;"
     }
 }
