Added new connection with azure cloud database

--- a/MainProject/MainProject/appsettings.json
+++ b/MainProject/MainProject/appsettings.json
@@ -7,6 +7,6 @@
         }
     },
     "ConnectionStrings": {
-        "DefaultConnection": "Server=LAPTOP-ILUK0PDF;Database='Driving Booking Lesson System';Trusted_Connection=True;TrustServerCertificate=True;"
+        "DefaultConnection": "Server=tcp:sqlserver-university-project.database.windows.net,1433;Initial Catalog=Driving lesson booking system;Persist Security Info=False;User ID=rootadmin;Password=@Password12345;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     }
 }
