Adding Coursework report

--- a/MainFormProject/MainFormProject/appsettings.json
+++ b/MainFormProject/MainFormProject/appsettings.json
@@ -7,6 +7,6 @@
         }
     },
     "ConnectionStrings": {
-        "DefaultConnection": "Server=LAPTOP-ILUK0PDF;Database=Driving Booking lesson system;Trusted_Connection=True;TrustServerCertificate=True;"
+        "DefaultConnection": "Server=LAPTOP-JS6R412Q;Database=Driving Booking lesson system;Trusted_Connection=True;TrustServerCertificate=True;"
     }
 }
